minor change to MyApplication.java

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>comp3111-project-2020s</name>
+	<name>T16_temp_repo</name>
 	<comment></comment>
 	<projects>
 	</projects>
